--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
 
     <nav class="navbar navbar-dark navbar-expand-lg bg-dark text-light fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand mb-0 h1 text-light" href="/">Simple Blog</a>
+          <a class="navbar-brand mb-0 h1 text-light" href="/">SimpleBlogs</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
           </button>
