--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -1,29 +1,62 @@
 <%- include("./partials/header.ejs") %>
 
+    <main style="min-height: 79vh">
+        <% if(locals.blog) {%>
+            <div class="blog-card my-5 pt-5 w-50 h-50 mx-auto">
+                <h2 class="title">
+                    <%= blog.title %>
 
-    <% if(locals.blog) {%>
-        <div class="blog-card mt-5 pt-5 w-50 mx-auto" style="min-height: 79vh">
-            <h2 class="title">
-                <%= blog.title %>
+                </h2>
+                <p class="content mt-3" data-id="<%= blog.id %>">
+                    <%= blog.content %>
 
-            </h2>
-            <p class="content mt-3" data-id="<%= blog.id %>">
-                <%= blog.content %>
+                        <div class="d-flex justify-content-end">
+                            <button class="update btn btn-secondary mt-5 ms-2" data-bs-toggle="modal"
+                                data-bs-target="#updateModal">Update</button>
+                            <button class="delete btn btn-danger mt-5 ms-2">Delete</button>
+                        </div>
+            </div>
 
-                    <div class="d-flex justify-content-end">
-                        <button class="update btn btn-secondary mt-5 ms-2">Update</button>
-                        <button class="delete btn btn-danger mt-5 ms-2">Delete</button>
+            <% } %>
+
+
+                <!-- Modal -->
+                <div class="modal fade" id="updateModal" tabindex="-1" aria-labelledby="updateModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="updateModalLabel">Update Blog</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <form action="/<%= blog.id %>" id="updateForm">
+                                    <div class="mb-3">
+                                        <label for="title" class="form-label">Title:</label>
+                                        <input type="text" class="form-control" id="title" name="title" required>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="content" class="form-label">Content:</label>
+                                        <textarea class="form-control" id="content" name="content" rows="4"
+                                            required></textarea>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="submit" form="updateForm" class="btn btn-primary">Submit</button>
+                            </div>
+                        </div>
                     </div>
-        </div>
+                </div>
+    </main>
+    <%- include("./partials/footer.ejs") %>
 
-        <% } %>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+        <script src="scripts/blog.js"></script>
+        </body>
 
-            <%- include("./partials/footer.ejs") %>
-
-                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-                    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-                    crossorigin="anonymous"></script>
-                <script src="scripts/blog.js"></script>
-                </body>
-
-                </html>
+        </html>
